add recipy module

--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -6,7 +6,7 @@
       <ion-label>Всі рецепти</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
+    <ion-tab-button tab="add-recipy">
       <ion-icon name="add-circle-outline"></ion-icon>
       <ion-label>Додати рецепт</ion-label>
     </ion-tab-button>
