shopping-list module

--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -16,7 +16,7 @@
       <ion-label>Календар</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
+    <ion-tab-button tab="shopping-list">
       <ion-icon name="bag-handle-outline"></ion-icon>
       <ion-label>Список покупок</ion-label>
     </ion-tab-button>
