--- a/src/app/planner/planner.page.html
+++ b/src/app/planner/planner.page.html
@@ -1,17 +1,6 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Планувальник
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header></app-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Планувальник</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
   <app-explore-container name="Планувальник"></app-explore-container>
 </ion-content>
