--- a/src/app/recipies/recipies.page.html
+++ b/src/app/recipies/recipies.page.html
@@ -1,17 +1,6 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Рецепти
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header></app-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Рецепти</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
   <app-explore-container name="Recipies"></app-explore-container>
 </ion-content>
