--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <ion-app>
+  <app-loading-overlay *ngIf="isLoading$ | async"></app-loading-overlay>
   <ion-router-outlet></ion-router-outlet>
 </ion-app>
