--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,25 +1,37 @@
 <ion-tabs>
-
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="recipies">
       <ion-icon name="home-outline"></ion-icon>
       <ion-label>Всі рецепти</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="add-recipy">
-      <ion-icon name="add-circle-outline"></ion-icon>
-      <ion-label>Додати рецепт</ion-label>
-    </ion-tab-button>
+    <ng-container *ngIf="isLoggedIn$ | async">
+      <ion-tab-button tab="add-recipy">
+        <ion-icon name="add-circle-outline"></ion-icon>
+        <ion-label>Додати рецепт</ion-label>
+      </ion-tab-button>
 
-    <ion-tab-button tab="planner">
-      <ion-icon name="calendar-outline"></ion-icon>
-      <ion-label>Календар</ion-label>
-    </ion-tab-button>
+      <ion-tab-button tab="planner">
+        <ion-icon name="calendar-outline"></ion-icon>
+        <ion-label>Календар</ion-label>
+      </ion-tab-button>
 
-    <ion-tab-button tab="shopping-list">
-      <ion-icon name="bag-handle-outline"></ion-icon>
-      <ion-label>Список покупок</ion-label>
-    </ion-tab-button>
+      <ion-tab-button tab="shopping-list">
+        <ion-icon name="bag-handle-outline"></ion-icon>
+        <ion-label>Список покупок</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button (click)="logout()">
+        <ion-icon name="person-outline"></ion-icon>
+        <ion-label>Авторизація</ion-label>
+      </ion-tab-button>
+    </ng-container>
+    <ng-container *ngIf="!(isLoggedIn$ | async)">
+      <ion-tab-button tab="auth">
+        <ion-icon name="person-outline"></ion-icon>
+        <ion-label>Авторизація</ion-label>
+      </ion-tab-button>
+    </ng-container>
+
   </ion-tab-bar>
-
 </ion-tabs>
