--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -23,7 +23,7 @@
 
       <ion-tab-button (click)="logout()">
         <ion-icon name="person-outline"></ion-icon>
-        <ion-label>Авторизація</ion-label>
+        <ion-label>Вийти</ion-label>
       </ion-tab-button>
     </ng-container>
     <ng-container *ngIf="!(isLoggedIn$ | async)">
