adjustments to short recipy view

--- a/src/app/pages/recipies/components/recipy-short-view/recipy-short-view.component.html
+++ b/src/app/pages/recipies/components/recipy-short-view/recipy-short-view.component.html
@@ -63,7 +63,7 @@
         <ion-icon slot="start" name="star"></ion-icon>
         Перейти до рецепту
       </ion-button>
-      <ion-button (click)="showCollections()">
+      <ion-button *ngIf="currentUser" (click)="showCollections()">
         <ion-icon slot="start" name="star"></ion-icon>
         Колекції
       </ion-button>
