full recipy page init

--- a/src/app/pages/recipies/components/recipy-short-view/recipy-short-view.component.html
+++ b/src/app/pages/recipies/components/recipy-short-view/recipy-short-view.component.html
@@ -59,7 +59,7 @@
     </div>
 
     <div class="actions-pane">
-      <ion-button>
+      <ion-button (click)="goFullRecipy()">
         <ion-icon slot="start" name="star"></ion-icon>
         Перейти до рецепту
       </ion-button>
