full recipy, ingredient

--- a/src/app/pages/recipies/pages/full-recipy-page/full-recipy-page.component.html
+++ b/src/app/pages/recipies/pages/full-recipy-page/full-recipy-page.component.html
@@ -1,3 +1,2 @@
-<p>
-  full-recipy-page works!
-</p>
+<app-header></app-header>
+<app-recipy-full-view [recipy]="recipy$ | async"></app-recipy-full-view>
