ingredients split by group

--- a/src/app/pages/recipies/components/recipy-full-view/recipy-full-view.component.html
+++ b/src/app/pages/recipies/components/recipy-full-view/recipy-full-view.component.html
@@ -6,11 +6,13 @@
     </ion-segment-button>
   </ion-segment>
 
-
   <ng-container *ngIf="currentTab === tabs[0].value">
-
     <div class="portions padding-inline">
-      <div class="portions-info" *ngIf="!isEditPortions" (click)="isEditPortions = true">
+      <div
+        class="portions-info"
+        *ngIf="!isEditPortions"
+        (click)="isEditPortions = true"
+      >
         {{ portionsToServe }} порції по {{ portionSize }} грам
       </div>
       <div *ngIf="isEditPortions" class="portions-edit">
@@ -36,12 +38,30 @@
       </div>
     </div>
 
-    <ion-list>
-      <app-ingredient *ngFor="let ingredient of recipy.ingrediends" [ingredient]="ingredient" [coefficient]="coeficient">
-      </app-ingredient>      
-    </ion-list>
-
+    <ng-container *ngIf="!isSplitToGroups">
+      <ion-list>
+        <app-ingredient
+          *ngFor="let ingredient of recipy.ingrediends"
+          [ingredient]="ingredient"
+          [coefficient]="coeficient"
+        >
+        </app-ingredient>
+      </ion-list>
+    </ng-container>
+    <ng-container>
+      <ng-container *ngFor="let item of ingredientsByGroup | keyvalue">
+        <ng-container *ngIf="item.value.length > 0">
+          <h4>{{ item.key }}</h4>
+          <app-ingredient
+            *ngFor="let ingredient of item.value"
+            [ingredient]="ingredient"
+            [coefficient]="coeficient"
+          ></app-ingredient>
+        </ng-container>
+      </ng-container>
+    </ng-container>
   </ng-container>
+  
 
   <ng-container *ngIf="currentTab === tabs[1].value"> steps </ng-container>
   <ng-container *ngIf="currentTab === tabs[2].value"> info </ng-container>
