full recipy: preparation steps

--- a/src/app/pages/recipies/components/recipy-full-view/recipy-full-view.component.scss
+++ b/src/app/pages/recipies/components/recipy-full-view/recipy-full-view.component.scss
@@ -1,1 +1,9 @@
+.preparations-steps {
+  ion-label {
+    white-space: normal;
+  }
+}
 
+.current-step::part(native) {
+  background-color: var(--ion-color-secondary);
+}
