--- a/src/app/pages/recipies/components/recipy-full-view/recipy-full-view.component.html
+++ b/src/app/pages/recipies/components/recipy-full-view/recipy-full-view.component.html
@@ -14,7 +14,18 @@
     ></app-ingredients-tab>
   </ng-container>
 
-  <ng-container *ngIf="currentTab === tabs[1].value"> steps </ng-container>
+  <ng-container *ngIf="currentTab === tabs[1].value">
+    <ion-list lines="full" class="preparations-steps">
+      <ion-item
+        *ngFor="let step of recipy.steps; let i = index"
+        [class.current-step]="selectedStepId === i"
+        (click)="selectedStepId = i"
+      >
+        <ion-label>{{ step.description }}</ion-label>
+      </ion-item>
+    </ion-list>
+  </ng-container>
+  
   <ng-container *ngIf="currentTab === tabs[2].value"> info </ng-container>
 </ng-container>
 
