info tab: full recipy

--- a/src/app/pages/recipies/pages/full-recipy-page/full-recipy-page.component.html
+++ b/src/app/pages/recipies/pages/full-recipy-page/full-recipy-page.component.html
@@ -1,2 +1,5 @@
 <app-header></app-header>
-<app-recipy-full-view [recipy]="recipy$ | async"></app-recipy-full-view>
+<app-recipy-full-view
+  [recipy]="recipy$ | async"
+  [currentUser]="user$ | async"
+></app-recipy-full-view>
