--- a/src/app/pages/recipies/components/recipy-full-view/recipy-full-view.component.html
+++ b/src/app/pages/recipies/components/recipy-full-view/recipy-full-view.component.html
@@ -25,8 +25,10 @@
       </ion-item>
     </ion-list>
   </ng-container>
-  
-  <ng-container *ngIf="currentTab === tabs[2].value"> info </ng-container>
+
+  <ng-container *ngIf="currentTab === tabs[2].value">
+    <app-info-tab [currentUser]="currentUser" [recipy]="recipy"></app-info-tab>
+  </ng-container>
 </ng-container>
 
 <ng-template #noRecipy>There's no such recipy</ng-template>
