--- a/src/app/pages/recipies/components/recipy-full-view/recipy-full-view.component.scss
+++ b/src/app/pages/recipies/components/recipy-full-view/recipy-full-view.component.scss
@@ -12,7 +12,8 @@
 }
 
 .current-step::part(native) {
-  background-color: var(--ion-color-secondary);
+  background-color: var(--ion-color-primary);
+  color: var(--ion-color-light);
 }
 
 .scrollable {
