--- a/src/global.scss
+++ b/src/global.scss
@@ -35,4 +35,6 @@
 
 :root{
     --header-height: 0px;
+    --ion-text-color: var(--ion-color-dark, #000);
+    --ion-background-color: var(--ion-color-secondary)
 }
