--- a/src/app/pages/recipies/components/recipy-short-view/recipy-short-view.component.scss
+++ b/src/app/pages/recipies/components/recipy-short-view/recipy-short-view.component.scss
@@ -24,7 +24,7 @@ ion-card-content {
   width: 100%;
   z-index: -1;
   transition: all 200ms ease-in-out;
-  background-color: var(--ion-color-light);
+  background-color: var(--ion-color-tertiary);
   padding: 10px;
   & > div {
     margin-bottom: 5px;
