--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -11,7 +11,7 @@
         <ion-label>Додати рецепт</ion-label>
       </ion-tab-button>
 
-      <ion-tab-button tab="planner">
+      <ion-tab-button tab="calendar">
         <ion-icon name="calendar-outline"></ion-icon>
         <ion-label>Календар</ion-label>
       </ion-tab-button>
