calendar: view recipy

--- a/src/app/pages/calendar/components/calendar-recipy/calendar-recipy.component.html
+++ b/src/app/pages/calendar/components/calendar-recipy/calendar-recipy.component.html
@@ -1,5 +1,5 @@
 <div class="recipy-name">
-  <ion-item button>
+  <ion-item button (click)="viewRecipy()">
     <ion-label>
       <h2>{{ recipy.name }}</h2>
       <div class="additional-info">
