--- a/src/app/shared/components/recipy-full-view/ingredients-tab/ingredients-tab.component.html
+++ b/src/app/shared/components/recipy-full-view/ingredients-tab/ingredients-tab.component.html
@@ -23,7 +23,7 @@
         (ngModelChange)="getCoeficient()"
       ></ion-input>
     </ion-item>
-    <ion-button size="small" (click)="isEditPortions = false">
+    <ion-button size="small" (click)="onPortionsChanged()">
       <ion-icon slot="icon-only" name="checkmark"></ion-icon>
     </ion-button>
   </div>
