--- a/src/app/shared/components/recipy-full-view/recipy-full-view.component.html
+++ b/src/app/shared/components/recipy-full-view/recipy-full-view.component.html
@@ -12,6 +12,7 @@
         [recipy]="recipy"
         [portions]="portions"
         [amountPerPortion]="amountPerPortion"
+        (portionsChanged)="onPortionsChanged($event)"
       ></app-ingredients-tab>
     </ng-container>
 
