--- a/src/app/pages/calendar/pages/calendar-recipy-full-view/calendar-recipy-full-view.component.html
+++ b/src/app/pages/calendar/pages/calendar-recipy-full-view/calendar-recipy-full-view.component.html
@@ -6,11 +6,15 @@
   </ion-toolbar>
 </ion-header>
 <app-recipy-full-view
-*ngIf="(recipy$ | async) && (amountPerPortion$ | async) && (portions$ | async); else loading"
+  *ngIf="
+    (recipy$ | async) && (amountPerPortion$ | async) && (portions$ | async);
+    else loading
+  "
   [recipy]="recipy$ | async"
   [currentUser]="user$ | async"
   [amountPerPortion]="amountPerPortion$ | async"
   [portions]="portions$ | async"
+  (portionsChanged)="onPortionsChanged($event)"
 ></app-recipy-full-view>
 
 <ng-template #loading>
