--- a/src/app/pages/calendar/components/calendar-recipy/calendar-recipy.component.html
+++ b/src/app/pages/calendar/components/calendar-recipy/calendar-recipy.component.html
@@ -4,6 +4,7 @@
       <h2>{{ recipy.name }}</h2>
       <div class="additional-info">
         <span>{{ recipy.portions }} порцій</span>
+        <span>{{ recipy.amountPerPortion }} гр/порцію</span>
         <span *ngIf="recipy.calorificValue">
           {{
             Math.round((recipy.calorificValue * recipy.amountPerPortion) / 100)
