--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -21,9 +21,9 @@
         <ion-label>Список покупок</ion-label>
       </ion-tab-button>
 
-      <ion-tab-button (click)="logout()">
-        <ion-icon name="person-outline"></ion-icon>
-        <ion-label>Вийти</ion-label>
+      <ion-tab-button (click)="presentPopover($event)">
+        <ion-icon name="construct-outline"></ion-icon>
+        <ion-label>Профіль</ion-label>
       </ion-tab-button>
     </ng-container>
     <ng-container *ngIf="!(isLoggedIn$ | async)">
@@ -32,6 +32,26 @@
         <ion-label>Авторизація</ion-label>
       </ion-tab-button>
     </ng-container>
-
   </ion-tab-bar>
 </ion-tabs>
+
+<ion-popover
+  #popover
+  [isOpen]="isProfileMenuOpen"
+  (didDismiss)="isProfileMenuOpen = false"
+>
+  <ng-template>
+    <ion-content class="ion-padding">
+      <ion-list>
+        <ion-item lines="full" button (click)="goPlanner()" detail="false">
+          <ion-icon slot="start" name="briefcase-outline"></ion-icon>
+          <ion-label>Планер</ion-label>
+        </ion-item>
+        <ion-item lines="full" button (click)="logout()" detail="false">
+          <ion-icon slot="start" name="person-outline"></ion-icon>
+          <ion-label>Вийти</ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-content>
+  </ng-template>
+</ion-popover>
