--- a/src/app/pages/planner/planner.page.html
+++ b/src/app/pages/planner/planner.page.html
@@ -16,7 +16,7 @@
           swipeLeftDelete
           *ngFor="let planner of plannersList"
           (click)="onPlannerClicked(planner.id)"
-          (deleteItem)="onDelete(planner.id)"
+          (deleteItem)="onDelete(planner)"
         >
           <ion-label
             >{{ getFormattedName(planner.startDate) | date: 'MMMM, dd' }} - {{
