--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -6,10 +6,10 @@
     </ion-tab-button>
 
     <ng-container *ngIf="isLoggedIn$ | async">
-      <ion-tab-button tab="add-recipy">
+      <!-- <ion-tab-button tab="add-recipy"> TODO: this should be in a menu or in all recipies
         <ion-icon name="add-circle-outline"></ion-icon>
         <ion-label>Додати рецепт</ion-label>
-      </ion-tab-button>
+      </ion-tab-button> -->
 
       <ion-tab-button tab="calendar">
         <ion-icon name="calendar-outline"></ion-icon>
@@ -21,9 +21,14 @@
         <ion-label>Список покупок</ion-label>
       </ion-tab-button>
 
-      <ion-tab-button (click)="presentPopover($event)">
-        <ion-icon name="construct-outline"></ion-icon>
-        <ion-label>Профіль</ion-label>
+      <ion-tab-button tab="planner">
+        <ion-icon name="briefcase-outline"></ion-icon>
+        <ion-label>Планер</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button (click)="logout()">
+        <ion-icon name="person-outline"></ion-icon>
+        <ion-label>Вийти</ion-label>
       </ion-tab-button>
     </ng-container>
     <ng-container *ngIf="!(isLoggedIn$ | async)">
@@ -35,23 +40,3 @@
   </ion-tab-bar>
 </ion-tabs>
 
-<ion-popover
-  #popover
-  [isOpen]="isProfileMenuOpen"
-  (didDismiss)="isProfileMenuOpen = false"
->
-  <ng-template>
-    <ion-content class="ion-padding">
-      <ion-list>
-        <ion-item lines="full" button (click)="goPlanner()" detail="false">
-          <ion-icon slot="start" name="briefcase-outline"></ion-icon>
-          <ion-label>Планер</ion-label>
-        </ion-item>
-        <ion-item lines="full" button (click)="logout()" detail="false">
-          <ion-icon slot="start" name="person-outline"></ion-icon>
-          <ion-label>Вийти</ion-label>
-        </ion-item>
-      </ion-list>
-    </ion-content>
-  </ng-template>
-</ion-popover>
