--- a/src/app/pages/calendar/components/day/day.component.html
+++ b/src/app/pages/calendar/components/day/day.component.html
@@ -1,8 +1,20 @@
 <div *ngIf="!!day.details" class="day-wrapper" [id]="day.details.day">
-  <app-calendar-meal [day]="day" [mealtime]="MealTime.Breakfast">
+  <app-calendar-meal
+    [day]="day"
+    [mealtime]="MealTime.Breakfast"
+    [addRecipies]="addRecipies"
+  >
   </app-calendar-meal>
-  <app-calendar-meal [day]="day" [mealtime]="MealTime.Lunch">
+  <app-calendar-meal
+    [day]="day"
+    [mealtime]="MealTime.Lunch"
+    [addRecipies]="addRecipies"
+  >
   </app-calendar-meal>
-  <app-calendar-meal [day]="day" [mealtime]="MealTime.Dinner">
+  <app-calendar-meal
+    [day]="day"
+    [mealtime]="MealTime.Dinner"
+    [addRecipies]="addRecipies"
+  >
   </app-calendar-meal>
 </div>
