--- a/src/app/pages/calendar/components/calendar-recipy/calendar-recipy.component.html
+++ b/src/app/pages/calendar/components/calendar-recipy/calendar-recipy.component.html
@@ -1,5 +1,5 @@
 <div class="recipy-name">
-  <ion-item button (click)="viewRecipy()">
+  <ion-item button (click)="viewRecipy()" swipeLeftDelete (deleteItem)="onDelete()">
     <ion-label>
       <h2>{{ recipy.name }}</h2>
       <div class="additional-info">
@@ -22,16 +22,4 @@
       </div>
     </ion-label>
   </ion-item>
-  <!-- <mat-expansion-panel hideToggle>
-     FIXME: needs implementation: delete recipy on swipe left
-    <mat-action-list>
-      <button
-        mat-list-item
-        class="recipy-details-item button"
-        (click)="onRemoveRecipy()"
-      >
-        <mat-icon>delete_outline</mat-icon>Видалити
-      </button>
-    </mat-action-list>
-  </mat-expansion-panel> -->
 </div>
