--- a/src/app/pages/planner/pages/view-recipy/view-recipy.component.html
+++ b/src/app/pages/planner/pages/view-recipy/view-recipy.component.html
@@ -5,17 +5,19 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
-<app-recipy-full-view
-  *ngIf="
-    (recipy$ | async) && (amountPerPortion$ | async) && (portions$ | async);
-    else loading
-  "
-  [recipy]="recipy$ | async"
-  [currentUser]="user$ | async"
-  [amountPerPortion]="amountPerPortion$ | async"
-  [portions]="portions$ | async"
-  (portionsChanged)="onPortionsChanged($event)"
-></app-recipy-full-view>
+<ion-content [fullscreen]="true">
+  <app-recipy-full-view
+    *ngIf="
+      (recipy$ | async) && (amountPerPortion$ | async) && (portions$ | async);
+      else loading
+    "
+    [recipy]="recipy$ | async"
+    [currentUser]="user$ | async"
+    [amountPerPortion]="amountPerPortion$ | async"
+    [portions]="portions$ | async"
+    (portionsChanged)="onPortionsChanged($event)"
+  ></app-recipy-full-view>
+</ion-content>
 
 <ng-template #loading>
   <app-loading-overlay></app-loading-overlay>
