--- a/src/app/pages/planner/pages/planner-core/planner-core.component.html
+++ b/src/app/pages/planner/pages/planner-core/planner-core.component.html
@@ -14,7 +14,7 @@
 <ion-content [fullscreen]="true">
   <ng-container [ngSwitch]="currentTab">
     <ng-container *ngSwitchCase="tabs[0].name"
-      ><app-planner-main></app-planner-main
+      ><app-planning></app-planning
     ></ng-container>
     <ng-container *ngSwitchCase="tabs[1].name"
       ><app-shopping></app-shopping
