moved logic to smart component

--- a/src/app/pages/planner/components/shopping/shopping.component.html
+++ b/src/app/pages/planner/components/shopping/shopping.component.html
@@ -1,3 +1,3 @@
-<p>
-  shopping works!
-</p>
+<ion-button expand="full" [disabled]="isShoppingListActive"
+  >Зробити список активним</ion-button
+>
