--- a/src/app/pages/planner/components/add-to-list-modal/add-to-list-modal.component.html
+++ b/src/app/pages/planner/components/add-to-list-modal/add-to-list-modal.component.html
@@ -14,21 +14,34 @@
       [value]="selectedList"
       (ionChange)="listChange($event)"
     >
-      <ion-item *ngFor="let list of lists">
+      <ion-item
+        swipeLeftNoConfirmation
+        *ngFor="let list of lists"
+        (itemSwiped)="onDeleteList(list)"
+      >
         <ion-label>{{ list.name }}</ion-label>
         <ion-radio slot="end" [value]="list.name"></ion-radio>
       </ion-item>
     </ion-radio-group>
-    <ion-item *ngIf="!isAddNewList" button detail="false" (click)="isAddNewList = true">
+    <ion-item
+      *ngIf="!isAddNewList"
+      button
+      detail="false"
+      (click)="isAddNewList = true"
+    >
       <ion-label>Додати список</ion-label>
       <ion-icon slot="start" name="add-outline"></ion-icon>
     </ion-item>
     <ion-item class="add-new-list" *ngIf="isAddNewList" button detail="false">
       <ion-label position="floating">Введіть назву:</ion-label>
       <ion-input [(ngModel)]="newList"></ion-input>
-      <ion-button slot="end" (click)="addList()" [disabled]="newList.length < 3">
+      <ion-button
+        slot="end"
+        (click)="addList()"
+        [disabled]="newList.length < 3"
+      >
         <ion-icon slot="icon-only" name="checkmark-outline"></ion-icon>
-      </ion-button>      
+      </ion-button>
     </ion-item>
   </ion-list>
 
