--- a/src/app/pages/shopping-list/shopping-list.page.html
+++ b/src/app/pages/shopping-list/shopping-list.page.html
@@ -1,5 +1,54 @@
 <app-header></app-header>
 
 <ion-content>
+  <ion-segment [value]="currentTab" (ionChange)="onTabChange($event)">
+    <ion-segment-button [value]="tab.name" *ngFor="let tab of tabs">
+      {{tab.name}}
+    </ion-segment-button>
+  </ion-segment>
 
+  <ng-container [ngSwitch]="currentTab">
+    <ng-container *ngSwitchCase="tabs[0].name">
+      <ion-list>
+        <ion-item-group *ngFor="let list of (activeList$ | async)">
+          <ng-container *ngIf="hasNotBought(list)">
+            <ion-item-divider sticky="true">
+              <ion-label>{{list.name}}</ion-label>
+            </ion-item-divider>
+            <ng-container *ngFor="let item of list.items">
+              <ion-item
+                swipeLeftNoConfirmation
+                *ngIf="!item.completed"
+                (itemSwiped)="onSwiped(item, list.name)"
+              >
+                <ion-label>{{item.title}}</ion-label>
+                <ion-chip>{{ getAmountInList(item) }}</ion-chip>
+              </ion-item>
+            </ng-container>
+          </ng-container>
+        </ion-item-group>
+      </ion-list>
+    </ng-container>
+    <ng-container *ngSwitchCase="tabs[1].name">
+      <ion-list>
+        <ion-item-group *ngFor="let list of (activeList$ | async)">
+          <ng-container *ngIf="hasBought(list)">
+            <ion-item-divider sticky="true">
+              <ion-label>{{list.name}}</ion-label>
+            </ion-item-divider>
+            <ng-container *ngFor="let item of list.items">
+              <ion-item
+                swipeLeftNoConfirmation
+                *ngIf="item.completed"
+                (itemSwiped)="onSwiped(item, list.name)"
+              >
+                <ion-label>{{item.title}}</ion-label>
+                <ion-chip>{{ getAmountInList(item) }}</ion-chip>
+              </ion-item>
+            </ng-container>
+          </ng-container>
+        </ion-item-group>
+      </ion-list>
+    </ng-container>
+  </ng-container>
 </ion-content>
