--- a/src/app/pages/recipies/pages/full-recipy-page/full-recipy-page.component.html
+++ b/src/app/pages/recipies/pages/full-recipy-page/full-recipy-page.component.html
@@ -1,5 +1,16 @@
-<app-header></app-header>
-<app-recipy-full-view
-  [recipy]="recipy$ | async"
-  [currentUser]="user$ | async"
-></app-recipy-full-view>
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="tabs/recipies"></ion-back-button>
+    </ion-buttons>
+    <ion-title *ngIf="recipy$ | async">
+      <p>{{ (recipy$ | async)!.name }}</p>
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
+<ion-content>
+  <app-recipy-full-view
+    [recipy]="recipy$ | async"
+    [currentUser]="user$ | async"
+  ></app-recipy-full-view>
+</ion-content>
