--- a/src/app/pages/calendar/components/add-recipy-modal/add-recipy-modal.component.html
+++ b/src/app/pages/calendar/components/add-recipy-modal/add-recipy-modal.component.html
@@ -14,38 +14,78 @@
       </ion-toolbar>
     </ion-header>
     <ion-content class="ion-padding">
-      <ion-list>
-        <ion-item
-          button
-          *ngFor="let recipy of recipies"
-          (click)="onRecipyClicked(recipy.id)"
-        >
-          <ion-label>
-            <h2 class="ion-text-wrap">{{ recipy.name }}</h2>
-            <p class="recipy-details">
-              <span>{{ preparationTime(recipy) | normalizeTime }}</span>
-              <span>
-                <ion-icon
-                  name="alarm"
-                  *ngIf="isNeedsAdvancePreparation(recipy)"
-                ></ion-icon>
-                <ion-icon
-                  name="bulb"
-                  *ngIf="isPrepSuggestions(recipy)"
-                ></ion-icon>
-                <ion-icon
-                  name="checkmark-done"
-                  *ngIf="recipy.isCheckedAndApproved"
-                ></ion-icon>
-              </span>
+      <ng-container *ngIf="!(collectionSelected$ | async)">
+        <ion-list>
+          <ion-item
+            button
+            *ngFor="let collection of collections$ | async"
+            (click)="collectionSelected$.next(collection)"
+          >
+            <ion-label>{{ collection.name }}</ion-label>
+          </ion-item>
+          <ion-item
+            button
+            (click)="collectionSelected$.next({ name: 'all', recipies: [] })"
+          >
+            <ion-label>Всі рецепти</ion-label>
+          </ion-item>
+        </ion-list>
+      </ng-container>
+      <ng-container *ngIf="collectionSelected$ | async">
+        <h3 class="collection-name">
+          <ion-button size="small" (click)="collectionSelected$.next(null)">
+            <ion-icon name="arrow-back-outline" slot="icon-only"></ion-icon>
+          </ion-button>
+          <span>Колекція {{ (collectionSelected$ | async)!.name }}</span>
+        </h3>
+        <ion-list>
+          <ion-item
+            detail="false"
+            button
+            *ngFor="let recipy of recipies$ | async"
+            (click)="onRecipyClicked(recipy.id)"
+          >
+            <ion-label class="recipy-content">
+              <div class="recipy-text">
+                <h2 class="ion-text-wrap">{{ recipy.name }}</h2>
+                <div class="recipy-details">
+                  <div>
+                    <span>
+                      <ion-icon name="american-football-outline"></ion-icon>
+                      {{ activePreparationTime(recipy) | normalizeTime }}
+                    </span>
+                    <span>
+                      <ion-icon name="beer-outline"></ion-icon>
+                      {{ passivePreparationTime(recipy) | normalizeTime }}
+                    </span>
+                  </div>
+                  <span>
+                    <ion-icon
+                      name="alarm"
+                      *ngIf="isNeedsAdvancePreparation(recipy)"
+                    ></ion-icon>
+                    <ion-icon
+                      name="bulb"
+                      *ngIf="isPrepSuggestions(recipy)"
+                    ></ion-icon>
+                    <ion-icon
+                      name="checkmark-done"
+                      *ngIf="recipy.isCheckedAndApproved"
+                    ></ion-icon>
+                  </span>
 
-              <span *ngIf="recipy.calorificValue"
-                >{{ Math.round(recipy.calorificValue) }} ккал в 100гр.</span
-              >
-            </p>
-          </ion-label>
-        </ion-item>
-      </ion-list>
+                  <span *ngIf="recipy.calorificValue"
+                    >{{ Math.round(recipy.calorificValue) }} ккал в 100гр.</span
+                  >
+                </div>
+              </div>
+              <div class="recipy-photo" *ngIf="recipy.photo">
+                <app-image [imagePath]="recipy.photo"></app-image>
+              </div>
+            </ion-label>
+          </ion-item>
+        </ion-list>
+      </ng-container>
     </ion-content>
   </ng-template>
 </ion-modal>
