--- a/src/app/pages/calendar/components/add-recipy-modal/add-recipy-modal.component.scss
+++ b/src/app/pages/calendar/components/add-recipy-modal/add-recipy-modal.component.scss
@@ -1,5 +1,29 @@
 .recipy-details {
-    display: flex;
-    justify-content: space-between;
-    width: 80%;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  font-size: 12px;
+  color: var(--ion-color-medium);
+}
+
+.collection-name {
+  display: flex;
+  align-items: center;
+  span {
+    margin-left: 30px;
+  }
+}
+
+.recipy-photo {
+  height: 125px;
+  width: 140px;
+  min-width: 140px;
+  margin-left: 10px;
+}
+
+.recipy-content {
+  display: flex;
+  .recipy-text {
+    flex-grow: 1;
+  }
 }
