--- a/src/app/pages/calendar/pages/calendar-recipy-full-view/calendar-recipy-full-view.component.html
+++ b/src/app/pages/calendar/pages/calendar-recipy-full-view/calendar-recipy-full-view.component.html
@@ -3,19 +3,24 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="tabs/calendar"></ion-back-button>
     </ion-buttons>
+    <ion-title *ngIf="recipy$ | async">
+      <p>{{ (recipy$ | async)!.name }}</p>
+    </ion-title>
   </ion-toolbar>
 </ion-header>
-<app-recipy-full-view
-  *ngIf="
-    (recipy$ | async) && (amountPerPortion$ | async) && (portions$ | async);
-    else loading
-  "
-  [recipy]="recipy$ | async"
-  [currentUser]="user$ | async"
-  [amountPerPortion]="amountPerPortion$ | async"
-  [portions]="portions$ | async"
-  (portionsChanged)="onPortionsChanged($event)"
-></app-recipy-full-view>
+<ion-content>
+  <app-recipy-full-view
+    *ngIf="
+      (recipy$ | async) && (amountPerPortion$ | async) && (portions$ | async);
+      else loading
+    "
+    [recipy]="recipy$ | async"
+    [currentUser]="user$ | async"
+    [amountPerPortion]="amountPerPortion$ | async"
+    [portions]="portions$ | async"
+    (portionsChanged)="onPortionsChanged($event)"
+  ></app-recipy-full-view>
+</ion-content>
 
 <ng-template #loading>
   <app-loading-overlay></app-loading-overlay>
