--- a/src/app/pages/planner/components/add-to-list-modal/add-to-list-modal.component.html
+++ b/src/app/pages/planner/components/add-to-list-modal/add-to-list-modal.component.html
@@ -3,10 +3,18 @@
     <ion-buttons slot="start">
       <ion-button color="medium" (click)="cancel()">Cancel</ion-button>
     </ion-buttons>
-    <ion-title>{{ ingredient.name }}</ion-title>
+    <ion-title>{{
+      isPlannedIngredient ? ingredient.name : newItemName
+    }}</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content class="ion-padding">
+  <ng-container *ngIf="!isPlannedIngredient">
+    <ion-item class="add-new-list" button detail="false">
+      <ion-label position="floating">Введіть назву:</ion-label>
+      <ion-input [(ngModel)]="newItemName"></ion-input>
+    </ion-item>
+  </ng-container>
   <h3>Виберіть список:</h3>
   <ion-list>
     <ion-radio-group
@@ -50,40 +58,44 @@
     <ion-input [(ngModel)]="amountToAdd"></ion-input>
   </ion-item>
 
-  <h3>Використовується в:</h3>
-  <ion-list class="used-in">
-    <ng-container *ngFor="let childItem of ingredient.items">
-      <ion-item *ngFor="let id of childItem.recipyId">
-        <ion-label>
-          <h4>
-            {{ getrecipyName(id) }}
-            <span *ngIf="ingredient.unit !== 13">
+  <ng-container *ngIf="isPlannedIngredient">
+    <h3>Використовується в:</h3>
+    <ion-list class="used-in">
+      <ng-container *ngFor="let childItem of ingredient.items">
+        <ion-item *ngFor="let id of childItem.recipyId">
+          <ion-label>
+            <h4>
+              {{ getrecipyName(id) }}
+              <span *ngIf="ingredient.unit !== 13">
+                {{
+                  +childItem.amount
+                    | convertToSelectedUnit
+                      : childItem.product
+                      : ingredient.unit
+                    | normalizeDisplayedAmount : ingredient.unit
+                }}
+              </span>
+              <span *ngIf="ingredient.unit === 13"> за смаком </span>
+              <span>{{ getUnitText(ingredient.unit) }}</span>
+            </h4>
+            <p>
               {{
-                +childItem.amount
-                  | convertToSelectedUnit : childItem.product : ingredient.unit
-                  | normalizeDisplayedAmount : ingredient.unit
+                moment(childItem.day[0].day, "DDMMYYYY")
+                  .clone()
+                  .format("ddd, DD MMMM")
               }}
-            </span>
-            <span *ngIf="ingredient.unit === 13"> за смаком </span>
-            <span>{{ getUnitText(ingredient.unit) }}</span>
-          </h4>
-          <p>
-            {{
-              moment(childItem.day[0].day, "DDMMYYYY")
-                .clone()
-                .format("ddd, DD MMMM")
-            }}
-          </p>
-        </ion-label>
-      </ion-item>
-    </ng-container>
-  </ion-list>
+            </p>
+          </ion-label>
+        </ion-item>
+      </ng-container>
+    </ion-list>
+  </ng-container>
 
   <ion-button
     class="add-btn"
     expand="full"
     [disabled]="!isValid"
     (click)="confirm()"
-    >{{ isValid ? "Додати" : "Виберіть список" }}</ion-button
+    >{{ confirmButton }}</ion-button
   >
 </ion-content>
