--- a/src/app/pages/planner/components/shopping/shopping.component.html
+++ b/src/app/pages/planner/components/shopping/shopping.component.html
@@ -1,4 +1,8 @@
-<ion-button expand="full" [disabled]="isShoppingListActive">
+<ion-button
+  expand="full"
+  [disabled]="isShoppingListActive"
+  (click)="makeListActive()"
+>
   Зробити список активним
 </ion-button>
 
