--- a/src/app/pages/shopping-list/shopping-list.page.html
+++ b/src/app/pages/shopping-list/shopping-list.page.html
@@ -9,46 +9,59 @@
 
   <ng-container [ngSwitch]="currentTab">
     <ng-container *ngSwitchCase="tabs[0].name">
-      <ion-list>
-        <ion-item-group *ngFor="let list of (activeList$ | async)">
-          <ng-container *ngIf="hasNotBought(list)">
-            <ion-item-divider sticky="true">
+      <ion-accordion-group>
+        <ng-container *ngFor="let list of (activeList$ | async)">
+          <ion-accordion [value]="list.name" *ngIf="hasNotBought(list)">
+            <ion-item slot="header" color="primary">
               <ion-label>{{list.name}}</ion-label>
-            </ion-item-divider>
-            <ng-container *ngFor="let item of list.items">
-              <ion-item
-                swipeLeftNoConfirmation
-                *ngIf="!item.completed"
-                (itemSwiped)="onSwiped(item, list.name)"
-              >
-                <ion-label>{{item.title}}</ion-label>
-                <ion-chip>{{ getAmountInList(item) }}</ion-chip>
-              </ion-item>
-            </ng-container>
-          </ng-container>
-        </ion-item-group>
-      </ion-list>
+            </ion-item>
+            <div class="ion-padding" slot="content">
+              <ion-list>
+                <ng-container *ngFor="let item of list.items">
+                  <ion-item
+                    swipeLeftNoConfirmation
+                    *ngIf="!item.completed"
+                    (itemSwiped)="onSwiped(item, list.name)"
+                  >
+                    <ion-label>{{item.title}}</ion-label>
+                    <ion-chip>{{ getAmountInList(item) }}</ion-chip>
+                  </ion-item>
+                </ng-container>
+              </ion-list>
+            </div>
+          </ion-accordion>
+        </ng-container>
+      </ion-accordion-group>
     </ng-container>
     <ng-container *ngSwitchCase="tabs[1].name">
-      <ion-list>
-        <ion-item-group *ngFor="let list of (activeList$ | async)">
-          <ng-container *ngIf="hasBought(list)">
-            <ion-item-divider sticky="true">
+      <ion-accordion-group>
+        <ng-container *ngFor="let list of (activeList$ | async)">
+          <ion-accordion [value]="list.name" *ngIf="hasBought(list)">
+            <ion-item slot="header" color="primary">
               <ion-label>{{list.name}}</ion-label>
-            </ion-item-divider>
-            <ng-container *ngFor="let item of list.items">
-              <ion-item
-                swipeLeftNoConfirmation
-                *ngIf="item.completed"
-                (itemSwiped)="onSwiped(item, list.name)"
-              >
-                <ion-label>{{item.title}}</ion-label>
-                <ion-chip>{{ getAmountInList(item) }}</ion-chip>
-              </ion-item>
-            </ng-container>
-          </ng-container>
-        </ion-item-group>
-      </ion-list>
+            </ion-item>
+            <div class="ion-padding" slot="content">
+              <ion-list>
+                <ng-container *ngFor="let item of list.items">
+                  <ion-item
+                    swipeLeftNoConfirmation
+                    *ngIf="item.completed"
+                    (itemSwiped)="onSwiped(item, list.name)"
+                  >
+                    <ion-label>{{item.title}}</ion-label>
+                    <ion-chip>{{ getAmountInList(item) }}</ion-chip>
+                  </ion-item>
+                </ng-container>
+              </ion-list>
+            </div>
+          </ion-accordion>
+        </ng-container>
+      </ion-accordion-group>
     </ng-container>
   </ng-container>
+  <ion-fab slot="fixed" vertical="top" horizontal="end">
+    <ion-fab-button (click)="addCustomItem()">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
